nouvelle scrollbar, fixe tri et filtre

--- a/style/commun.css
+++ b/style/commun.css
@@ -40,3 +40,24 @@ header {
 header img {
     height: 100%;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #00000066;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: black; 
+    
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #FFF; 
+  }
