--- a/style/recherche.css
+++ b/style/recherche.css
@@ -84,7 +84,7 @@ main {
 
 #listePersonnages div img {
     vertical-align: middle;
-    margin-right: 20%;
+    margin-right: 8vw;
     height: 100%;
 }
 
@@ -103,8 +103,6 @@ aside {
 
 h1 {
     font-size: 300%;
-    padding-top: 1%;
-    padding-bottom: 1%;
     width: 100%;
     box-shadow: #0000004a 0px 12px 14px 0px;
 }
@@ -116,9 +114,28 @@ h2 {
     box-shadow: #0000004a 0px 5px 14px 0px;
 }
 
+h3 {
+    font-size: 170%;
+    font-weight: unset;
+    width: 99.9%;
+    position: sticky;
+    top: 0px;
+    box-shadow: #0000004a 0px 12px 14px 0px;
+    background-color: #ffffffe0;
+    color: black;
+}
+
+h1, h3{
+    padding: 1% 0%;
+}
+
 h1, h2 {
     color: white;
     background-color: black;
+}
+
+h1, h2, h3 {
+    text-shadow:none;
 }
 
 ul {
